feat(v1): add cache control (#10)
* feat(v1): update responses to use cache control headers

* feat(v1): add required params error

* feat(v1): add better comments

* chore: squash
