# packages/v1/quests/internal/types/responseheaders.go
@@ -1,0 +1,6 @@
+package types
+
+type ResponseHeaders struct {
+	CacheControl   string `json:"Cache-Control"`
+	ContentType string `json:"Content-Type"`
+}
