# packages/v1/versions/internal/types/response.go
@@ -1,6 +1,7 @@
 package types
 
 type Response struct {
-	Body       ResponseBody `json:"body,omitempty"`
-	StatusCode int          `json:"statusCode,omitempty"`
+	Body       ResponseBody    `json:"body,omitempty"`
+	Headers    ResponseHeaders `json:"headers,omitempty"`
+	StatusCode int             `json:"statusCode,omitempty"`
 }
